# Onion

./: .gitignore  LICENSE  README.md  main.py  requirements.txt
.github/workflows/: main.yaml
bot_service/: Dockerfile  main.py  pyproject.toml
bot_service/bot/: config.py  logger.py
bot_service/bot/base/: bot.py  defaults.py  dispatcher.py
bot_service/bot/routers/: __init__.py  main.py
bot_service/bot/store/database/: db.py  models.py  sa_base.py
data/: data.db
db/: .env.example  base_database.py  config.py  crud.py  docker-compose.db.yaml  exceptions.py  models.py  sqlalchemy_database.py
enternal/: Dockerfile  config.py  main.py  pyproject.toml
enternal/handlers/: __init__.py  main.py  organizations.py  posts.py  subscribers.py  subscription.py  users.py
enternal/services/: domains.py  posts.py  subscribers.py  subscriptions.py
enternal/services/models/: domains.py
enternal/storages/: engine.py  sqlalchemy_db.py  storage.py
handlers/: organizations.py  posts.py  users.py
minio/: .env.example  docker-compose.minio.yaml
redis/redisdata/appendonlydir/: appendonly.aof.1.base.rdb
rediska/: .env.example
services/: posts.py  users.py
storage/: main.py  pyproject.toml
storage/app/: models.py  schemas.py  validation.py
storage/app/base/: base_accessor.py
storage/app/database/: db.py
storage/app/posts/: routes.py  views.py
storage/app/subscribers/: routes.py  views.py
storage/app/web/: app.py  config.py  logger.py  middlewares.py  routes.py  schemes.py  utils.py
storages/: exceptions.py  models.py
web_service/: manage.py
web_service/main/: auth_views.py  decorators.py  tests.py  urls.py  views.py
web_service/main/templates/: base.html  create_organization.html  create_post.html  create_publication.html  create_writer.html  delete_writer.html  index.html  login.html  logout.html  organization.html  post.html  register.html  register_writer.html  remove_organization.html
web_service/web_service/: asgi.py  settings.py  urls.py  wsgi.py
